--- a/config.yaml
+++ b/config.yaml
@@ -10,6 +10,12 @@ ws_type_to_indexes:
   Taxon: taxon
   Tree: tree
   GenomeFeature: genome_features
+  AttributeMapping: attribute_mapping
+  MetaboliteMatrix: matrix
+  DifferentialExpressionMatrix: matrix
+  ExpressionMatrix: matrix
+  FitnessMatrix: matrix
+  TraitMatrix: matrix
 
 es_type_global_name: data
 
@@ -18,7 +24,26 @@ sdk_indexer_apps:
   KBaseGenomes.Genome:
     sdk_app: example_app
     sdk_func: example_func
-
+  KBaseMatrices.MetaboliteMatrix:
+    sdk_app: kbasematrices_indexer
+    sdk_func: run_kbasematrices_indexer
+    sub_obj_index: attribute_mapping
+  KBaseMatrices.DifferentialExpressionMatrix:
+    sdk_app: kbasematrices_indexer
+    sdk_func: run_kbasematrices_indexer
+    sub_obj_index: attribute_mapping
+  KBaseMatrices.ExpressionMatrix:
+    sdk_app: kbasematrices_indexer
+    sdk_func: run_kbasematrices_indexer
+    sub_obj_index: attribute_mapping
+  KBaseMatrices.FitnessMatrix:
+    sdk_app: kbasematrices_indexer
+    sdk_func: run_kbasematrices_indexer
+    sub_obj_index: attribute_mapping
+  KBaseMatrices.TraitMatrix:
+    sdk_app: kbasematrices_indexer
+    sdk_func: run_kbasematrices_indexer
+    sub_obj_index: attribute_mapping
 
 # Which indexes are considered "subobjects" (nested under workspace objects, such as genome features)
 ws_subobjects:
@@ -57,6 +82,8 @@ latest_versions:
   pangenome_orthologfamily: "pangenome_orthologfamily:1"
   taxon: "taxon:1"
   tree: "tree:1"
+  matrix: "matrix:1"
+  attribute_mapping: "attribute_mapping:1"
 
 # Aliases from any index to any name
 aliases:
@@ -69,6 +96,8 @@ aliases:
   "pangenome_orthologfamily:1": pangenome_orthologfamily
   "taxon:1": taxon
   "tree:1": tree
+  "matrix:1": matrix
+  "attribute_mapping:1": attribute_mapping
 
 # All ES type mappings
 mappings:
@@ -196,3 +225,32 @@ mappings:
         properties:
           node_id: {type: text}
           label: {type: text}
+
+  "attribute_mapping:1":
+    global_mappings: [ws_subobject, ws_auth, ws_object]
+    properties:
+      attributes: {type: keyword}
+      attribute_ontology_ids: {type: keyword}
+      attribute_units: {type: keyword}
+      attribute_unit_ontology_ids: {type: keyword}
+      attribute_values: {type: keyword}
+      attribute_value_ontology_ids: {type: keyword}
+      instances: {type: object}
+      num_attributes: {type: integer}
+      num_instances: {type: integer}
+
+  "matrix:1":
+    global_mappings: [ws_auth, ws_object]
+    properties:
+      matrix_type: {type: keyword}
+      row_attributes: {type: keyword}
+      col_attributes: {type: keyword}
+      row_attribute_ontology_ids: {type: keyword}
+      col_attribute_ontology_ids: {type: keyword}
+      row_attribute_values: {type: keyword}
+      col_attribute_values: {type: keyword}
+      row_ids: {type: keyword}
+      col_ids: {type: keyword}
+      num_rows: {type: integer}
+      num_columns: {type: integer}
+      attributes: {type: keyword}
