--- a/config.yaml
+++ b/config.yaml
@@ -55,6 +55,7 @@ ws_subobjects:
   - "pangenome_orthologfamily:1"
   - "attribute_mapping:1"
   - "annotated_metagenome_assembly_features:1"
+  - "annotated_metagenome_assembly_contigs:1"
 
 # Generic, global type mappings. These can be reused in any index mappings below.
 global_mappings:
@@ -94,6 +95,7 @@ latest_versions:
   indexing_errors: "indexing_errors:1"
   annotated_metagenome_assembly: "annotated_metagenome_assembly:1"
   annotated_metagenome_assembly_features: "annotated_metagenome_assembly_features:1"
+  annotated_metagenome_assembly_contigs: "annotated_metagenome_assembly_contigs:1"
 
 # Aliases from any index to any name
 aliases:
@@ -320,6 +322,13 @@ mappings:
       annotated_metagenome_assembly_num_features: {type: integer}
       annotated_metagenome_assembly_num_contigs: {type: integer}
       annotated_metagenome_assembly_gc_content: {type: float}
+
+  "annotated_metagenome_assembly_contigs:1":
+    global_mappings: [ws_subobject, ws_auth, ws_object]
+    properties:
+      feature_ids: {type: keyword}
+      num_features: {type: int}
+      size: {type: int}
 
   "indexing_errors:1":
     properties:
